# mundipy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yaml
docs/: automatic-projections.mdx  create-project.mdx  foreign-currencies.mdx  geometric-operations.mdx  get-projects.mdx  get-started.mdx  getting-started.mdx  install.mdx  introduction.mdx  layer-management.mdx  layer-view.md  layer.mdx  loading-datasets.mdx  map.mdx  mint.config.json  multi-contract.mdx  payment-methods.mdx  pre-fill.mdx  projected-coordinate-systems.mdx  projection-api.mdx  querying-datasets.mdx  quickstart.mdx  spatial-footprint-cache.mdx  spatial-indexing.mdx  spatial-lru-cache.mdx  spatial-union-cache.mdx
docs/manual/: datasets.mdx  geometric-operations.mdx
docs/third-party-apis/: isochrones.mdx
docs/tutorials/: catchment-area.mdx
mundipy/: dataset.py  geometry.py  layer.py  map.py  mundi.py  utils.py
mundipy/api/: __init__.py  osm.py
mundipy/cache/: __init__.py
mundipy/pcs/: README.md  __init__.py  _simplify.py
tests/: test_cache.py  test_example.py  test_external_plot.py  test_geometry.py  test_mundi_q.py  test_pcs.py  test_third_party.py  test_utils.py
tests/fixtures/: la_coffeeshops.geojson  los-angeles.geojson  multilinestring.geojson  points.geojson  polygon.geojson  texas_epsg_2844.geojson
