[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mundipy"
version = "0.0.3"
authors = [
  { name="Brendan Ashworth", email="brendan@buntinglabs.com" },
]
description = "mundipy is a Python framework for spatial data manipulation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS"
]

dependencies = [
    'tqdm >= 4.64.0, < 5',
    'geopandas >= 0.11.1, < 1',
    'pandas >= 1.4.2, < 2',
    'Shapely >= 1.8.2, < 2',
    'Fiona >= 1.8.21, < 2',
    'pyproj >= 3.3.1, < 4',
    'numpy >= 1.22.3, < 2',
    'pygeos >= 0.13, < 1',
    'overpy >= 0.6, < 1',
    'matplotlib >= 3.5.2, <4'
]

[project.urls]
"Documentation" = "https://docs.mundi.ai/"
"GitHub" = "https://github.com/BuntingLabs/mundipy"
"File an Issue" = "https://github.com/BuntingLabs/mundipy/issues"
"Bunting Labs" = "https://buntinglabs.com/"
