[tool.poetry]
name = "mundipy"
version = "0.2.0"
description = "mundipy is a Python framework for spatial data analysis"
authors = ["Brendan Ashworth <brendan@buntinglabs.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://buntinglabs.com/"
repository = "https://github.com/BuntingLabs/mundipy"
documentation = "https://docs.mundi.ai/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS"
]
include = ["mundipy/pcs/crs_simple.geojson"]
exclude = ["example.py"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.64.1"
geopandas = "^0.11.1"
pandas = "^1.5.0"
Shapely = "^1.8.4"
Fiona = "^1.8.21"
pyproj = "^3.4.0"
numpy = "^1.23.3"
pygeos = "^0.13"
overpy = "^0.6"
matplotlib = "^3.6.0"
SQLAlchemy = "^1.4.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
