[tool.poetry]
name = "mundipy"
version = "0.7.9"
description = "mundipy is a Python framework for spatial data analysis"
authors = ["Brendan Ashworth <brendan@buntinglabs.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://buntinglabs.com/"
repository = "https://github.com/BuntingLabs/mundipy"
documentation = "https://docs.mundi.ai/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS"
]
include = ["mundipy/pcs/crs_simple.geojson"]
exclude = ["example.py"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
Fiona = "^1.8.21"
pyproj = "^3.4.0"
numpy = "^1.23.3"
SQLAlchemy = "^1.4.40"
fiona = "^1.8.21"
psycopg = "^3.0.16"
psycopg-binary = "^3.0.16"
psycopg-pool = "^3.1.1"
shapely = "2.0b2"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-benchmark = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flameprof = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
